<resources>
    <string name="app_name">Resume App</string>

    <string name="profile_picture_description">Portfolio Profile Picture</string>
    <string name="ring_description">simple growing ring</string>

    <string name="home_label">INTRO</string>
    <string name="projects_label">PROJECTS</string>
    <string name="work_label">RESUME</string>
    <string name="contact_label">CONTACT</string>

    <string name="welcome_header">Welcome!</string>
    <string name="welcome_message">\tWelcome to my Resume App! Take a peek at some of my previous work, &amp; try to keep an
        eye on the app\'s behaviour. I tried my best to implement as many UI/UX tricks I\'ve learned
        throughout the months (with moderation of course.)

            \n\n\tIf you like what you see, you\'ll find all my credentials at the Contact Page!
    </string>

    <string name="confirm">OK</string>

    <string name="who_am_i_header">Who am I?</string>
    <string name="overview_message">\tI am a student at the University of Toronto who will be graduating this June with a
        major in Human Biology, a major in Pharmacology &amp; a minor in Computer Science.

            \n\n\tI started to transition from the Life Sciences to Software Engineering when I was
        challenged to build a calculator on Minecraft for Xbox. This was an understandably arduous
        task considering I did not know any binary code, logic gating, or even of the Coding Block
        that existed on the PC version of the game!

            \n\n\tTo keep a long story short, I made a very rough first draft that could only
        calculate 1+2, 1+3 or 2+3. After improving upon my design by building an extendable
        \"skeleton\" that could sum any distinct positive integer, I decided to take \"Computer
        Science for the Life Sciences\" (CSC120) &amp; the rest is history!
    </string>
    <string name="projects_icon_description">projects icon</string>
    <string name="project_overview_header">What have I done?</string>
    <string name="project_overview_intro">\tSee below for a brief overview of my published work. Feel free to take a glance at my other
        miscellaneous work as well at:
    </string>
    <string name="project_overview_intro2">\n\tYou will also be able to explore my various projects &amp; work experience throughout
        this app. All relevant links will be included &amp; tappable, so if you\'re interested in
        anything in particular, feel free to follow the link!
    </string>

    <string name="github_link">https://github.com/SchneiderVictor</string>
    <string name="resume_link">https://schneidervictor.github.io/res/resume.docx</string>
    <string name="pcrs_jslinux_link">https://github.com/schneidervictor/PCRS_JSLINUX</string>
    <string name="dotsnlines_link">https://github.com/schneidervictor/DotsNLines</string>
    <string name="memories_link">https://github.com/SchneiderVictor/-memories</string>
    <string name="therapy_inov_before_link">http://therapyinnovationinc.com/index2.html</string>
    <string name="therapy_inov_after_link">http://therapyinnovationinc.com/</string>
    <string name="time_capsules_link">https://csc309-team19.herokuapp.com/</string>

    <string name="tab_education">Education</string>
    <string name="tab_experience">Experience</string>
    <string name="tab_skills">Skills</string>

    <string name="company_logo_description">company logo</string>
    <string name="therapy_inov_job_title">Software Development Intern</string>
    <string name="uoft_job_title">Volunteer Web Developer</string>
    <string name="b2b_job_title">Bilingual Administration Officer</string>

    <string name="therapy_inov_location">Therapy Innovation Inc. | Toronto, ON, CAN</string>
    <string name="therapy_inov_period">October 2018 – February 2019</string>
    <string name="uoft_location">University of Toronto, St. George Campus | Toronto, ON, CAN</string>
    <string name="uoft_period">May 2018 – August 2018</string>
    <string name="b2b_location">B2B Bank Head Office | Toronto, ON, CAN</string>
    <string name="b2b_period">January 2016 - August 2019</string>
    <string name="google_period">September 2019 - present</string>

    <string name="therapy_inov_description">Responsible for developing an ongoing prototype Android application for the start-up.

        \n\nRebuilt the Android application from the ground up, <b>improving the UX &amp; UI</b> by
        improving the clarity &amp; hierarchy of activities &amp; redefining the theme &amp;
        structure of activities.

        \n\nTook the initiative to redesign the company website, <b>increasing website responsivity
        &amp; improving UI</b> by using Bootstrap.
    </string><string name="google_description"><b>I will be joining Google as part of their Engineering Residency program in September!</b>
    </string>
    <string name="therapy_inov_description_short">
        I have taken the initiative to redesign the company website, <b>increasing website responsivity
        &amp; improving UI</b> by using Bootstrap.
    </string>
    <string name="uoft_description">An exploratory project to emulate the Linux bash terminal on a web browser. Progress was to
        be guided &amp; supervised by two professors, however the work was done independently.

        \n\nStarting from nothing, I managed to quickly browse &amp; eliminate different options,
        <b>narrowing down to the most appropriate implementation.</b>

        \n\nAs a prototype is required, I have taken the initiative to <b>learn JavaScript &amp;
        the Node.js Express framework.</b>

        \n\nThis project largely written in JavaScript &amp; C, using emscripten to convert the C
        code to WebAssembly code.
    </string>
    <string name="b2b_description">Responsible for helping complete the bank’s many time-sensitive administrative duties, while
        <b>assessing the quality</b> of the team’s work &amp; any documents coming in &amp; out of
        the bank.

        \n\nOn many occasions, I have coordinated my peers &amp; directed them onto different queues
        <b>to prevent backlog.</b>

        \n\nI have <b>improved productivity</b> by revising team-specific work procedures &amp;
        training documents &amp; <b>improved client response rates</b> by revising translations on
        bank correspondence.

        \n\nI have taken the initiative to seek training on various work types <b>to help support a
        high-turnover work environment.</b>
    </string>
    <string name="time_capsules_description">A website created as a team of 4 for a Web Development
        project.

        \n\nA time capsule website, built from the ground up, using Bootstrap &amp; Javascript to
        facilitate the front-end &amp; Node.js, Express, Mongoose &amp; Heroku to facilitate the
        back-end.

        \n\nThis website serves as a virtual time capsule, where users can contribute or comment to
        "public event" capsules that are created by administrators (See two example public capsules).

        \n\nRegistered users additionally have private capsules to which they can invite other
        registered users.
    </string>

    <string name="download_resume">Download my full resume here!</string>
    <string name="uoft_logo_description">uoft logo</string>
    <string name="uoft_campus">University of Toronto, St. George Campus</string>
    <string name="program_label">Honours Bachelor of Science in Life Sciences</string>
    <string name="graduation_date">Graduating in: June 2019</string>
    <string name="uoft_edu_details"><b>GPA:</b> 3.13 / 4.0

        \n\n<b>Programs:</b>
            \n\t\tMajor in Human Biology
            \n\t\tMajor in Pharmacology
            \n\t\tMinor in Computer Science
    </string>

    <string name="pcrs_jslinux_label">PCRS_JSLINUX</string>
    <string name="dotsnlines_label">DotsNLines</string>
    <string name="memories_label">\@Memories</string>
    <string name="therapy_inov_before_after_label">Therapy Innovation website</string>

    <string name="dotsnlines_description">As a personal interest, I have taken it upon myself to learn full Android Development,
        <b>while keeping attention to material design principles.</b>

        \n\nCurrently working on developing a simple game of dots &amp; lines game using purely
        stock Android.
    </string>

    <string name="memories_description">As part as a class assignment, 3 teammates &amp; I created a JavaFx application that enabled
        the user to tag pictures, search through pictures by tags, review a history (&amp; revert to
        a specific state) which also featured autosaving.
    </string>
    <string name="projects_header">Check out my projects</string>
    <string name="projects_page_intro">Tap the buttons below to see github links &amp; descriptions of my projects.

        \n\nDemos &amp; screenshots coming soon!
    </string>
    <string name="skill_logo_desc">skill logo</string>
    <string name="java_skill_label">JAVA</string>
    <string name="c_skill_label">C</string>
    <string name="android_skill_label">ANDROID</string>
    <string name="python_skill_label">PYTHON</string>
    <string name="git_skill_label">GIT</string>
    <string name="html_xml_skill_label">HTML/XML</string>
    <string name="css_skill_label">CSS</string>
    <string name="bootstrap_skill_label">BOOTSTRAP</string>
    <string name="node_skill_label">NODE.JS</string>
    <string name="express_skill_label">EXPRESS.JS</string>
    <string name="linux_skill_label">LINUX ENVIRONMENTS</string>
    <string name="r_skill_label">R</string>

    <string name="phone_logo_description">Phone contact logo</string>
    <string name="email_logo_description">Email contact logo</string>
    <string name="instagram_logo_description">Instagram logo</string>
    <string name="twitter_logo_description">Twitter logo</string>
    <string name="facebook_logo_description">Facebook logo</string>
    <string name="linkedin_logo_description">LinkedIn logo</string>
    <string name="github_logo_description">Github logo</string>
    <string name="contact_details_header">Contact details</string>

    <string name="contact_intro">Tap the following logos to follow them to my respective profile.
        \n\nPlease note that if you have the respective app installed, it will be launched. Otherwise,
        you will be your internet browser will be launched. (This does not apply to the phone &amp; email
        links of course!)</string>
    <string name="time_capsule_label">Time Capsules website</string>
    <string name="tap_logo_prompt">Tap the logo to begin!</string>
    <string name="google_job_title">Engineering Resident</string>
    <string name="google_location">Mountain View, CA, USA</string>
    <string name="languages_skill_header">Languages</string>
    <string name="skill_platform_header">Platforms</string>
    <string name="skill_tools_header">Tools/Libraries</string>
    <string name="js_skill_label">JAVASCRIPT</string>
    <string name="react_skill_label">REACT</string>
</resources>
