<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContentActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="@dimen/default_image_size"
            android:layout_height="@dimen/default_image_size"
            android:contentDescription="@string/profile_picture_description"
            android:src="@drawable/profile_pic"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/who_am_i_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="@id/profile_pic"
            app:layout_constraintLeft_toRightOf="@id/profile_pic"
            app:layout_constraintTop_toTopOf="@id/profile_pic" />

        <TextView
            android:id="@+id/overview_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/overview_message"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_pic" />

        <TextView
            android:id="@+id/project_overview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/project_overview_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_message" />

        <TextView
            android:id="@+id/projects_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/project_overview_intro"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/project_overview_header" />

        <TextView
            android:id="@+id/github_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="visitTaggedSite"
            android:tag="@string/github_link"

            android:text="@string/github_link"
            android:textColor="@color/link_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/projects_intro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_overview_intro2"

            app:layout_constraintTop_toBottomOf="@id/github_link"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>