<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    tools:context=".activities.ContentActivity">

    <TextView
        android:id="@+id/contact_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_details_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/contact_intro_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contact_intro"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_header" />

    <ImageView
        android:id="@+id/github_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/github_logo_description"
        android:src="@drawable/github_logo"
        android:onClick="launchGithub"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/contact_intro_message"
        app:layout_constraintBottom_toTopOf="@id/ig_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/linkedin_logo"/>

    <ImageView
        android:id="@+id/linkedin_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/linkedin_logo_description"
        android:src="@drawable/linkedin_logo"
        android:onClick="launchLinkedIn"

        app:layout_constraintTop_toTopOf="@id/github_logo"
        app:layout_constraintBottom_toBottomOf="@id/github_logo"
        app:layout_constraintLeft_toRightOf="@id/github_logo"
        app:layout_constraintRight_toLeftOf="@id/phone_logo"/>

    <ImageView
        android:id="@+id/phone_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/phone_logo_description"
        android:src="@drawable/phone_logo"
        android:onClick="launchPhone"

        app:layout_constraintTop_toTopOf="@id/github_logo"
        app:layout_constraintBottom_toBottomOf="@id/github_logo"
        app:layout_constraintLeft_toRightOf="@id/linkedin_logo"
        app:layout_constraintRight_toLeftOf="@id/email_logo"/>

    <ImageView
        android:id="@+id/email_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/email_logo_description"
        android:src="@drawable/email_logo"
        android:onClick="launchEmail"

        app:layout_constraintTop_toTopOf="@id/github_logo"
        app:layout_constraintBottom_toBottomOf="@id/github_logo"
        app:layout_constraintLeft_toRightOf="@id/phone_logo"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/ig_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/instagram_logo_description"
        android:src="@drawable/ig_logo"
        android:layout_marginTop="20dp"
        android:onClick="launchIG"

        app:layout_constraintTop_toBottomOf="@id/github_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/twitter_logo"/>

    <ImageView
        android:id="@+id/twitter_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/twitter_logo_description"
        android:src="@drawable/twitter_logo"
        android:onClick="launchTwitter"

        app:layout_constraintTop_toTopOf="@id/ig_logo"
        app:layout_constraintBottom_toBottomOf="@id/ig_logo"
        app:layout_constraintLeft_toRightOf="@id/ig_logo"
        app:layout_constraintRight_toLeftOf="@id/facebook_logo"/>

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/facebook_logo_description"
        android:src="@drawable/fb_logo"
        android:onClick="launchFacebook"

        app:layout_constraintTop_toTopOf="@id/ig_logo"
        app:layout_constraintBottom_toBottomOf="@id/ig_logo"
        app:layout_constraintLeft_toRightOf="@id/twitter_logo"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>