<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.ContentActivity">

    <TextView
        android:id="@+id/download_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_resume"
        android:textColor="@color/colorAccent"
        android:onClick="downloadResume"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/uoft_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/uoft_logo_description"
        android:src="@drawable/uoft_logo"
        android:layout_marginTop="20dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_link" />

    <TextView
        android:id="@+id/uni_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uoft_campus"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="20dp"

        app:layout_constraintTop_toTopOf="@id/uoft_logo"
        app:layout_constraintBottom_toBottomOf="@id/uoft_logo"
        app:layout_constraintLeft_toRightOf="@id/uoft_logo"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/program_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/program_label"
        android:textSize="12sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uni_header" />

    <TextView
        android:id="@+id/graduation_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graduation_date"
        android:textSize="12sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/program_label" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/uoft_edu_details"
        android:textColor="@color/black"

        app:layout_constraintTop_toBottomOf="@id/graduation_date_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>